--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
-spring.application.name=demo
+# Remove or adjust if you want Tomcat to manage the port
+server.port=8080 
 
-#server.port=6684
+
+# Context path should be empty if you want it based on WAR name
+server.servlet.context-path=
